--- a/youtube-tinyworm/Base.lproj/Main.storyboard
+++ b/youtube-tinyworm/Base.lproj/Main.storyboard
@@ -21,11 +21,42 @@
                                 <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                                 <prototypes>
                                     <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="VideoCell" id="wU8-WO-Fat">
-                                        <rect key="frame" x="0.0" y="28" width="428" height="43.666667938232422"/>
+                                        <rect key="frame" x="0.0" y="28" width="428" height="299.33334350585938"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="wU8-WO-Fat" id="XTQ-6h-HWd">
-                                            <rect key="frame" x="0.0" y="0.0" width="428" height="43.666667938232422"/>
+                                            <rect key="frame" x="0.0" y="0.0" width="428" height="299.33334350585938"/>
                                             <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" translatesAutoresizingMaskIntoConstraints="NO" id="FQk-cQ-qNw">
+                                                    <rect key="frame" x="20" y="20" width="388" height="259.33333333333331"/>
+                                                    <subviews>
+                                                        <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" verticalCompressionResistancePriority="749" translatesAutoresizingMaskIntoConstraints="NO" id="6wG-Qu-hvf">
+                                                            <rect key="frame" x="0.0" y="0.0" width="388" height="218.33333333333334"/>
+                                                            <constraints>
+                                                                <constraint firstAttribute="width" secondItem="6wG-Qu-hvf" secondAttribute="height" multiplier="1280:720" id="hj8-vS-f1m"/>
+                                                            </constraints>
+                                                        </imageView>
+                                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="1i4-qI-3kf">
+                                                            <rect key="frame" x="0.0" y="218.33333333333334" width="388" height="20.666666666666657"/>
+                                                            <fontDescription key="fontDescription" type="boldSystem" pointSize="17"/>
+                                                            <nil key="textColor"/>
+                                                            <nil key="highlightedColor"/>
+                                                        </label>
+                                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="G8Z-ZV-5Dj">
+                                                            <rect key="frame" x="0.0" y="239" width="388" height="20.333333333333314"/>
+                                                            <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                            <nil key="textColor"/>
+                                                            <nil key="highlightedColor"/>
+                                                        </label>
+                                                    </subviews>
+                                                </stackView>
+                                            </subviews>
+                                            <constraints>
+                                                <constraint firstAttribute="trailing" secondItem="FQk-cQ-qNw" secondAttribute="trailing" constant="20" id="Axh-Lk-npD"/>
+                                                <constraint firstItem="FQk-cQ-qNw" firstAttribute="top" secondItem="XTQ-6h-HWd" secondAttribute="top" constant="20" id="O5k-u8-5g1"/>
+                                                <constraint firstAttribute="bottom" secondItem="FQk-cQ-qNw" secondAttribute="bottom" constant="20" id="SVn-0E-dYW"/>
+                                                <constraint firstItem="FQk-cQ-qNw" firstAttribute="leading" secondItem="XTQ-6h-HWd" secondAttribute="leading" constant="20" id="fQB-ar-2jj"/>
+                                            </constraints>
                                         </tableViewCellContentView>
                                     </tableViewCell>
                                 </prototypes>
